--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,8 @@ main {
 .projects-nav a {
     color: white;
     display: inline-block;
-    padding: 5px;
+    /* padding: 5px; */
+    padding: 18px 22px;
     transition: 0.3s ease 1s;
 }
 
