Fixing an issue with the click on project information

--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,7 @@ main {
 .project-slider__info.closed .nav-left,
 .project-slider__info.closed .nav-right {
     opacity:  0;
+    visibility: hidden;
     transition: 0s ease 0s;
 }
 
