--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ button:hover > .svg-inline--fa path {
     justify-content: flex-start;
     align-items: center;
     background-color: white;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 50px;
     padding: 0 40px 0 40px;
@@ -844,14 +844,15 @@ main {
     /* Main Wrapper */
     .main-wrapper {
         margin: 0;
-        height: calc(100vh - 160px);
+        /* height: calc(100vh - 160px); */
+        height: auto;
     }
 
     /* Aside */
     aside {
         position: relative;
         width: 100%;
-        height: 80px;
+        /* height: 80px; */
         padding: 10px;
     }
 
@@ -883,6 +884,7 @@ main {
         color: black;
         text-align: center;
         padding: 10px;
+        margin-bottom: 90px;
     }
 
     .project-slider__info hr {
@@ -940,6 +942,28 @@ main {
     .project-slider__info.closed hr {
         opacity: 1;
         visibility: visible;
+    }
+
+    /* Portfolio */
+    main {
+        height: auto;
+    }
+
+    .projects-grid__item {
+        width: 100%;
+        height: calc((100vh - 130px) / 2);
+    }
+
+    .filter-nav {
+        display: none;
+    }
+
+    header {
+        padding: 0 20px;
+    }
+
+    .page-title {
+        color: #999;
     }
 
 }
